[REV] add jdk proxy test